Bug 1388909 - Rework MediaRecorder to tranisition to inactive upon error. r=pehrsons

The MediaRecorder should transition to a 'inactive' state immediately upon
error. This changeset updates the recorder to do so. Previously the recorder
would fire an error event before transitioning, resuling in the state still
being 'recording' for handling of the the thrown error.

MozReview-Commit-ID: KMkaPOnEBYx